# oauthlib

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .travis_install.py  AUTHORS  CHANGELOG.rst  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.rst  SECURITY.md  bandit.json  pyproject.toml  requirements-test.txt  requirements-test32.txt  requirements.txt  requirements_dev.txt  ruff.toml  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  motd.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: oauthlib-maintainer.agent.md
.github/prompts/: release-checklist.prompt.md
.github/workflows/: codeql.yml  lint_python.yml  python-build.yml  python-publish.yml
docs/: Makefile  authcode.rst  backendapplicationclient.rst  baseclient.rst  client.rst  client2.rst  conf.py  contributing.rst  credentials.rst  decorators.rst  endpoints.rst  error_reporting.rst  faq.rst  feature_matrix.rst  implicit.rst  index.rst  installation.rst  legacyapplicationclient.rst  make.bat  mobileapplicationclient.rst  oauth2_overview.rst  oauth_1_versus_oauth_2.rst  password.rst  preconfigured_servers.rst  release_process.rst  requirements.txt  security.rst  server.rst  server2.rst  tokens.rst  validator.rst  webapplicationclient.rst
docs/logo/: oauthlib-banner.xcf
docs/oauth1/: client.rst  endpoints.rst  oauth1.rst  preconfigured_servers.rst  security.rst  server.rst  validator.rst
docs/oauth1/endpoints/: endpoints.rst  request_token.rst
docs/oauth2/: endpoints.rst  oauth2.rst  oauth2provider-legend.dot  oauth2provider-server.dot  oidc.rst  overview.rst  preconfigured_servers.rst  security.rst  server.rst
docs/oauth2/clients/: backendapplicationclient.rst  baseclient.rst  client.rst  deviceclient.rst  legacyapplicationclient.rst  mobileapplicationclient.rst  webapplicationclient.rst
docs/oauth2/endpoints/: authorization.rst  device.rst  dynamic.rst  endpoints.rst  introspect.rst  metadata.rst  resource.rst  token.rst
docs/oauth2/grants/: credentials.rst  custom_grant.rst  custom_validators.rst  device_code.rst  grants.rst  implicit.rst  jwt.rst  password.rst  refresh.rst
docs/oauth2/oidc/: authcode.rst  dispatchers.rst  endpoints.rst  grants.rst  hybrid.rst  id_tokens.rst  implicit.rst  refresh_token.rst  userinfo.rst  validator.rst
docs/oauth2/tokens/: bearer.rst  jwt.rst  mac.rst  saml.rst  tokens.rst
examples/: device_code_flow.py  flask-twitter.py  skeleton_oauth2_web_application_server.py
oauthlib/: __init__.py  common.py  oauth.py  parameters.py  signals.py  signature.py  uri_validate.py  utils.py
oauthlib/oauth1/: __init__.py
oauthlib/oauth1/rfc5849/: __init__.py  errors.py  parameters.py  request_validator.py  signature.py  utils.py
oauthlib/oauth2/: __init__.py
oauthlib/oauth2/draft25/: __init__.py  errors.py  exceptions.py  grant_types.py  parameters.py  server.py  tokens.py  utils.py
oauthlib/oauth2/draft_ietf13/: __init__.py  request_validator.py  tokens.py
oauthlib/oauth2/ext/: auditor.py  django.py  flask.py
oauthlib/oauth2/rfc6749/: __init__.py  errors.py  parameters.py  request_validator.py  tokens.py  utils.py
oauthlib/oauth2/rfc7591/: endpoint.py
oauthlib/oauth2/rfc8628/: __init__.py  errors.py  pre_configured.py  request_validator.py
oauthlib/oauth2_draft25/: parameters.py
oauthlib/openid/: __init__.py
oauthlib/tests/: .coverage  verify_spec.py
package/: MANIFEST.in  setup.py  tox.ini
package/docs/: Makefile  make.bat
package/examples/: skeleton_oauth2_web_application_server.py
package/oauthlib/: __init__.py
package/tests/: test_common.py
tests/: myrsakey.pem  parameters.py  private.pem  test_common.py  test_parameters.py  test_signatures.py  test_uri_validate.py  test_utils.py  twitter.py  verify_spec.py
tests/oauth1/rfc5849/: test_client.py  test_parameters.py  test_request_validator.py  test_server.py  test_signatures.py  test_utils.py
tests/oauth2/draft25/: test_client.py  test_grant_types.py  test_parameters.py  test_server.py  test_servers.py  test_tokens.py  test_utils.py
tests/oauth2_draft25/: test_parameters.py  test_tokens.py
tests/unittest/: __init__.py
(+167 files in other folders)
