[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = oauthlib
known_tests = tests
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER
line_length = 79
multi_line_output = 5
