[metadata]
name = oauthlib
version = oauthlib.__version__
author = The OAuthlib Community
author_email = idan@gazit.me
description = A generic, spec-compliant, thorough implementation of the OAuth request-signing logic
license = BSD-3-Clause
license_files = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Ib Lundgren
maintainer_email = ib.lundgren@gmail.com
url = https://github.com/oauthlib/oauthlib
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved
    License :: OSI Approved :: BSD License
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
platforms = any

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude = docs; tests; tests.*

[options.extras_require]
rsa = cryptography>=3.0.0
signals = blinker>=1.4.0
signedtoken = cryptography>=3.0.0; pyjwt>=2.0.0,<3

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = oauthlib
known_tests = tests
line_length = 79
multi_line_output = 5
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER
